# ot-flask-template

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .defaultenv  .flaskenv  .gitignore  Pipfile  dotenv.sh  pyproject.toml  readme-pipenv.md  readme-poetry.md  readme-requerements.md  requirements.txt  setup.cfg
{{cookiecutter.project_name}}/tests/: __init__.py  test_api_unit.py
{{cookiecutter.project_name}}/{{cookiecutter.app_name}}/: app.py  config.py  manage.py  wsgi.py
{{cookiecutter.project_name}}/{{cookiecutter.app_name}}/api/: __init__.py
